edit index.htmk file

--- a/html_source_file/index.html
+++ b/html_source_file/index.html
@@ -89,12 +89,19 @@
 
       <h2 id="about-me">About Me</h2>
 
-<p>I am a Ph.D. student at …</p>
+<p>I am Davoud Farhangi, a computer engineer who graduated from KIAU. \
+  I have a passion for data science and artificial intelligence, \
+  and I strive to stay up-to-date with the latest developments in \
+  these fields. When I'm not working on coding projects or analyzing \
+  data, you can find me indulging in my other hobbies: music and football. \
+  I am an electric guitar player, and I love nothing more than strumming out a \
+  tune in my free time. I'm also an avid football fan, and I enjoy playing the \
+  sport whenever I get the chance.</p>
 
 <h2 id="research-interests">Research Interests</h2>
 
 <ul>
-  <li><strong>Computer Vision:</strong> image recognition, image generation, video captioning</li>
+  <li><strong>:</strong> image recognition, image generation, video captioning</li>
   <li><strong>Machine Learning:</strong> meta-learning, incremental learning, transfer learning</li>
 </ul>
 
